# bpf-fs-events

./: .clang-format  Cargo.toml  ingest-old.rs  ingest-old.rs.2  readme.md  watcher.bpc.c.2
bpf-fs-events/: .gitignore  Cargo.toml  build.rs
bpf-fs-events-cli/: Cargo.toml
bpf-fs-events-cli/src/: main.rs
bpf-fs-events-sock/: Cargo.toml
bpf-fs-events-sock/src/: event_parsing.rs  lib.rs  limits.rs  main.rs  unix_sock_stream_client.rs  unix_sock_stream_server.rs
bpf-fs-events/src/: event.rs  ingest.rs  lib.rs  memlock_rlimit.rs  skel_watcher.rs
bpf-fs-events/src/bpf/: vmlinux.h  watcher.bpf.c
bpf-fs-events/tool/: build-bpf-with-cc.sh  gen-vmlinux.sh
