[package]
name = "bpf-fs-events"
version = "0.1.0"
edition = "2021"

[dependencies]
libbpf-rs = "0.23.2"
libc = "0.2.155"
plain = "0.2.3"
structopt = "0.3.26"

# Linking statically appears to be broken,
# so we'll use the dynamic library for now.
# libbpf-rs.version = "0.22.1"
# libbpf-rs.features = ["static"]

[build-dependencies]
libbpf-cargo = "0.23"
